# yet-another-guitar-app

./: README.md  conftest.py  pyproject.toml
app/api/: main.py  run_server.py
app/exercises/: _exercise.py  chord_practice.py
app/music/: chord.py
app/static/: index.html
docs/: decisions.md
scripts/: run_exercise.py
tests/functional/: example_chord_practice.py
tests/unit/: test_chord_practice.py
