[project]
name = "yet-another-guitar-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Moises Loma",email = "moiseslomaosorio@gmail.com"}
]
requires-python = ">=3.13"
dependencies = []
packages = [
    { include = "app" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]